--- a/Feature transformation/Encoding Categorical Data/Orinal_encoding.ipynb
+++ b/Feature transformation/Encoding Categorical Data/Orinal_encoding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        "4   16  Female  Average        UG        No"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,50 +100,51 @@
     "from sklearn.model_selection import (\n",
     "    train_test_split,\n",
     ")  # used to split data set into (x, y) train and (x, y) test\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import OrdinalEncoder\n",
     "from sklearn.linear_model import LogisticRegression, LogisticRegression\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "df = pd.read_csv(r\"/home/ahmed/Feature-engineering/DataSets/customer.csv\")\n",
-    "df.head()\n",
-    "# this data set consederd classification problem"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0    No\n",
-       "1    No\n",
-       "2    No\n",
-       "3    No\n",
-       "4    No\n",
-       "Name: purchased, dtype: object"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "review\n",
+      "Poor       18\n",
+      "Good       18\n",
+      "Average    14\n",
+      "Name: count, dtype: int64 education\n",
+      "PG        18\n",
+      "School    16\n",
+      "UG        16\n",
+      "Name: count, dtype: int64\n"
+     ]
     }
    ],
    "source": [
-    "test = df[\"purchased\"]\n",
-    "test.head()"
+    "features = df[[\"review\", \"education\"]]\n",
+    "features.head()\n",
+    "\n",
+    "print(df[\"review\"].value_counts(), df[\"education\"].value_counts())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-2 {\n",
+       "<style>#sk-container-id-1 {\n",
        "  /* Definition of color scheme common for light and dark mode */\n",
        "  --sklearn-color-text: black;\n",
        "  --sklearn-color-line: gray;\n",
@@ -173,15 +174,15 @@
        "  }\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 {\n",
+       "#sk-container-id-1 {\n",
        "  color: var(--sklearn-color-text);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 pre {\n",
+       "#sk-container-id-1 pre {\n",
        "  padding: 0;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 input.sk-hidden--visually {\n",
+       "#sk-container-id-1 input.sk-hidden--visually {\n",
        "  border: 0;\n",
        "  clip: rect(1px 1px 1px 1px);\n",
        "  clip: rect(1px, 1px, 1px, 1px);\n",
@@ -193,7 +194,7 @@
        "  width: 1px;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-dashed-wrapped {\n",
+       "#sk-container-id-1 div.sk-dashed-wrapped {\n",
        "  border: 1px dashed var(--sklearn-color-line);\n",
        "  margin: 0 0.4em 0.5em 0.4em;\n",
        "  box-sizing: border-box;\n",
@@ -201,7 +202,7 @@
        "  background-color: var(--sklearn-color-background);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-container {\n",
+       "#sk-container-id-1 div.sk-container {\n",
        "  /* jupyter's `normalize.less` sets `[hidden] { display: none; }`\n",
        "     but bootstrap.min.css set `[hidden] { display: none !important; }`\n",
        "     so we also need the `!important` here to be able to override the\n",
@@ -211,7 +212,7 @@
        "  position: relative;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-text-repr-fallback {\n",
+       "#sk-container-id-1 div.sk-text-repr-fallback {\n",
        "  display: none;\n",
        "}\n",
        "\n",
@@ -227,14 +228,14 @@
        "\n",
        "/* Parallel-specific style estimator block */\n",
        "\n",
-       "#sk-container-id-2 div.sk-parallel-item::after {\n",
+       "#sk-container-id-1 div.sk-parallel-item::after {\n",
        "  content: \"\";\n",
        "  width: 100%;\n",
        "  border-bottom: 2px solid var(--sklearn-color-text-on-default-background);\n",
        "  flex-grow: 1;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-parallel {\n",
+       "#sk-container-id-1 div.sk-parallel {\n",
        "  display: flex;\n",
        "  align-items: stretch;\n",
        "  justify-content: center;\n",
@@ -242,28 +243,28 @@
        "  position: relative;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-parallel-item {\n",
+       "#sk-container-id-1 div.sk-parallel-item {\n",
        "  display: flex;\n",
        "  flex-direction: column;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-parallel-item:first-child::after {\n",
+       "#sk-container-id-1 div.sk-parallel-item:first-child::after {\n",
        "  align-self: flex-end;\n",
        "  width: 50%;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-parallel-item:last-child::after {\n",
+       "#sk-container-id-1 div.sk-parallel-item:last-child::after {\n",
        "  align-self: flex-start;\n",
        "  width: 50%;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-parallel-item:only-child::after {\n",
+       "#sk-container-id-1 div.sk-parallel-item:only-child::after {\n",
        "  width: 0;\n",
        "}\n",
        "\n",
        "/* Serial-specific style estimator block */\n",
        "\n",
-       "#sk-container-id-2 div.sk-serial {\n",
+       "#sk-container-id-1 div.sk-serial {\n",
        "  display: flex;\n",
        "  flex-direction: column;\n",
        "  align-items: center;\n",
@@ -281,14 +282,14 @@
        "\n",
        "/* Pipeline and ColumnTransformer style (default) */\n",
        "\n",
-       "#sk-container-id-2 div.sk-toggleable {\n",
+       "#sk-container-id-1 div.sk-toggleable {\n",
        "  /* Default theme specific background. It is overwritten whether we have a\n",
        "  specific estimator or a Pipeline/ColumnTransformer */\n",
        "  background-color: var(--sklearn-color-background);\n",
        "}\n",
        "\n",
        "/* Toggleable label */\n",
-       "#sk-container-id-2 label.sk-toggleable__label {\n",
+       "#sk-container-id-1 label.sk-toggleable__label {\n",
        "  cursor: pointer;\n",
        "  display: block;\n",
        "  width: 100%;\n",
@@ -298,7 +299,7 @@
        "  text-align: center;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 label.sk-toggleable__label-arrow:before {\n",
+       "#sk-container-id-1 label.sk-toggleable__label-arrow:before {\n",
        "  /* Arrow on the left of the label */\n",
        "  content: \"▸\";\n",
        "  float: left;\n",
@@ -306,13 +307,13 @@
        "  color: var(--sklearn-color-icon);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {\n",
+       "#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {\n",
        "  color: var(--sklearn-color-text);\n",
        "}\n",
        "\n",
        "/* Toggleable content - dropdown */\n",
        "\n",
-       "#sk-container-id-2 div.sk-toggleable__content {\n",
+       "#sk-container-id-1 div.sk-toggleable__content {\n",
        "  max-height: 0;\n",
        "  max-width: 0;\n",
        "  overflow: hidden;\n",
@@ -321,12 +322,12 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-toggleable__content.fitted {\n",
+       "#sk-container-id-1 div.sk-toggleable__content.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-toggleable__content pre {\n",
+       "#sk-container-id-1 div.sk-toggleable__content pre {\n",
        "  margin: 0.2em;\n",
        "  border-radius: 0.25em;\n",
        "  color: var(--sklearn-color-text);\n",
@@ -334,79 +335,79 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-toggleable__content.fitted pre {\n",
+       "#sk-container-id-1 div.sk-toggleable__content.fitted pre {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {\n",
+       "#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {\n",
        "  /* Expand drop-down */\n",
        "  max-height: 200px;\n",
        "  max-width: 100%;\n",
        "  overflow: auto;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
+       "#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
        "  content: \"▾\";\n",
        "}\n",
        "\n",
        "/* Pipeline/ColumnTransformer-specific style */\n",
        "\n",
-       "#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-label.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-1 div.sk-label.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
        "/* Estimator-specific style */\n",
        "\n",
        "/* Colorize estimator box */\n",
-       "#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-estimator.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-1 div.sk-estimator.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-label label.sk-toggleable__label,\n",
-       "#sk-container-id-2 div.sk-label label {\n",
+       "#sk-container-id-1 div.sk-label label.sk-toggleable__label,\n",
+       "#sk-container-id-1 div.sk-label label {\n",
        "  /* The background is the default theme color */\n",
        "  color: var(--sklearn-color-text-on-default-background);\n",
        "}\n",
        "\n",
        "/* On hover, darken the color of the background */\n",
-       "#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {\n",
+       "#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
        "/* Label box, darken color on hover, fitted */\n",
-       "#sk-container-id-2 div.sk-label.fitted:hover label.sk-toggleable__label.fitted {\n",
+       "#sk-container-id-1 div.sk-label.fitted:hover label.sk-toggleable__label.fitted {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
        "/* Estimator label */\n",
        "\n",
-       "#sk-container-id-2 div.sk-label label {\n",
+       "#sk-container-id-1 div.sk-label label {\n",
        "  font-family: monospace;\n",
        "  font-weight: bold;\n",
        "  display: inline-block;\n",
        "  line-height: 1.2em;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-label-container {\n",
+       "#sk-container-id-1 div.sk-label-container {\n",
        "  text-align: center;\n",
        "}\n",
        "\n",
        "/* Estimator-specific */\n",
-       "#sk-container-id-2 div.sk-estimator {\n",
+       "#sk-container-id-1 div.sk-estimator {\n",
        "  font-family: monospace;\n",
        "  border: 1px dotted var(--sklearn-color-border-box);\n",
        "  border-radius: 0.25em;\n",
@@ -416,18 +417,18 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-estimator.fitted {\n",
+       "#sk-container-id-1 div.sk-estimator.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
        "/* on hover */\n",
-       "#sk-container-id-2 div.sk-estimator:hover {\n",
+       "#sk-container-id-1 div.sk-estimator:hover {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-estimator.fitted:hover {\n",
+       "#sk-container-id-1 div.sk-estimator.fitted:hover {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
@@ -514,7 +515,7 @@
        "\n",
        "/* \"?\"-specific style due to the `<a>` HTML tag */\n",
        "\n",
-       "#sk-container-id-2 a.estimator_doc_link {\n",
+       "#sk-container-id-1 a.estimator_doc_link {\n",
        "  float: right;\n",
        "  font-size: 1rem;\n",
        "  line-height: 1em;\n",
@@ -529,62 +530,80 @@
        "  border: var(--sklearn-color-unfitted-level-1) 1pt solid;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 a.estimator_doc_link.fitted {\n",
+       "#sk-container-id-1 a.estimator_doc_link.fitted {\n",
        "  /* fitted */\n",
        "  border: var(--sklearn-color-fitted-level-1) 1pt solid;\n",
        "  color: var(--sklearn-color-fitted-level-1);\n",
        "}\n",
        "\n",
        "/* On hover */\n",
-       "#sk-container-id-2 a.estimator_doc_link:hover {\n",
+       "#sk-container-id-1 a.estimator_doc_link:hover {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-3);\n",
        "  color: var(--sklearn-color-background);\n",
        "  text-decoration: none;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 a.estimator_doc_link.fitted:hover {\n",
+       "#sk-container-id-1 a.estimator_doc_link.fitted:hover {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LabelEncoder()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;LabelEncoder<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.4/modules/generated/sklearn.preprocessing.LabelEncoder.html\">?<span>Documentation for LabelEncoder</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>LabelEncoder()</pre></div> </div></div></div></div>"
+       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>OrdinalEncoder(categories=[[&#x27;Poor&#x27;, &#x27;Average&#x27;, &#x27;Good&#x27;], [&#x27;School&#x27;, &#x27;PG&#x27;, &#x27;UG&#x27;]],\n",
+       "               max_categories=4)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;OrdinalEncoder<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.4/modules/generated/sklearn.preprocessing.OrdinalEncoder.html\">?<span>Documentation for OrdinalEncoder</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>OrdinalEncoder(categories=[[&#x27;Poor&#x27;, &#x27;Average&#x27;, &#x27;Good&#x27;], [&#x27;School&#x27;, &#x27;PG&#x27;, &#x27;UG&#x27;]],\n",
+       "               max_categories=4)</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
-       "LabelEncoder()"
+       "OrdinalEncoder(categories=[['Poor', 'Average', 'Good'], ['School', 'PG', 'UG']],\n",
+       "               max_categories=4)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "LabelEncoder = LabelEncoder()\n",
-    "LabelEncoder.fit(test)"
+    "Ordinal = OrdinalEncoder(\n",
+    "    categories=[[\"Poor\", \"Average\", \"Good\"], [\"School\", \"PG\", \"UG\"]],\n",
+    "    max_categories=4,\n",
+    ")\n",
+    "Ordinal.fit(features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 1, 0,\n",
-       "       1, 0, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0,\n",
-       "       0, 1, 0, 1, 1, 0])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 0.]\n",
+      "[0. 2.]\n",
+      "[2. 1.]\n",
+      "[2. 1.]\n",
+      "[1. 2.]\n",
+      "[1. 0.]\n",
+      "[2. 0.]\n",
+      "[0. 0.]\n",
+      "[1. 2.]\n",
+      "[2. 2.]\n"
+     ]
     }
    ],
    "source": [
-    "test_fixed = LabelEncoder.transform(test)\n",
-    "test_fixed"
+    "features_fixed = Ordinal.transform(features)\n",
+    "for i in range(10):\n",
+    "    print(features_fixed[i])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
