--- a/Feature transformation/Scaling/notmalization.ipynb
+++ b/Feature transformation/Scaling/notmalization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "max    1.581524e+07   60.000000    150000.000000    1.000000"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,18 +115,26 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split # used to split data set into (x, y) train and (x, y) test \n",
-    "from sklearn.preprocessing import StandardScaler, MinMaxScaler, MaxAbsScaler, RobustScaler # used to transform data in to stadarization form\n",
+    "from sklearn.model_selection import (\n",
+    "    train_test_split,\n",
+    ")  # used to split data set into (x, y) train and (x, y) test\n",
+    "from sklearn.preprocessing import (\n",
+    "    StandardScaler,\n",
+    "    MinMaxScaler,\n",
+    "    MaxAbsScaler,\n",
+    "    RobustScaler,\n",
+    ")  # used to transform data in to stadarization form\n",
     "from sklearn.linear_model import LogisticRegression, LogisticRegression\n",
     "from sklearn.metrics import accuracy_score\n",
-    "df = pd.read_csv(r'Social_Network_Ads.csv')\n",
+    "\n",
+    "df = pd.read_csv(r\"/home/ahmed/Feature-engineering/DataSets/Social_Network_Ads.csv\")\n",
     "df.describe()\n",
-    "#this data set consederd classification problem "
+    "# this data set consederd classification problem"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -268,35 +276,39 @@
        "[400 rows x 5 columns]"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def mapper (gender):\n",
-    "    if gender == 'Male':\n",
+    "def mapper(gender):\n",
+    "    if gender == \"Male\":\n",
     "        return 1\n",
-    "    else :\n",
+    "    else:\n",
     "        return 2\n",
-    "df['Gender'] =  df['Gender'].apply(mapper)\n",
+    "\n",
+    "\n",
+    "df[\"Gender\"] = df[\"Gender\"].apply(mapper)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = df[['Age', 'EstimatedSalary', 'Gender']]\n",
-    "test = df['Purchased']\n",
-    "x_train,x_test, y_train, y_test = train_test_split(features, test, test_size=.3,random_state=0)"
+    "features = df[[\"Age\", \"EstimatedSalary\", \"Gender\"]]\n",
+    "test = df[\"Purchased\"]\n",
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    features, test, test_size=0.3, random_state=0\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +402,7 @@
        "max     60.000000    150000.000000    2.000000"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,22 +416,25 @@
    "metadata": {},
    "source": [
     "# MinMaxScaler\n",
-    "Transform features by scaling each feature to a given range, \n",
+    "\n",
+    "Transform features by scaling each feature to a given range,\n",
     "\n",
     "The transformation is given by:\n",
     "\n",
     "    X_scaled = X_std * (max - min) + min\n",
     "\n",
-    "MinMaxScaler doesn’t reduce the effect of outliers, but it linearly scales them down into a fixed range"
+    "MinMaxScaler doesn’t reduce the effect of outliers, but it linearly scales them down into a fixed range\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler1, scaler2 = MinMaxScaler(feature_range=(1, 3.95)), MinMaxScaler(feature_range=(1, 3.95))\n",
+    "scaler1, scaler2 = MinMaxScaler(feature_range=(1, 3.95)), MinMaxScaler(\n",
+    "    feature_range=(1, 3.95)\n",
+    ")\n",
     "\n",
     "scaler1.fit(x_train)\n",
     "scaler2.fit(x_test)\n",
@@ -427,12 +442,12 @@
     "x_train_scaled = scaler1.transform(X=x_train)\n",
     "x_test_scaled = scaler2.transform(X=x_test)\n",
     "x_train_scaled = pd.DataFrame(data=x_train_scaled, columns=x_train.columns)\n",
-    "x_test_scaled = pd.DataFrame(data=x_test_scaled, columns=x_test.columns)\n"
+    "x_test_scaled = pd.DataFrame(data=x_test_scaled, columns=x_test.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +541,7 @@
        "max      3.950000         3.950000    3.950000"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -555,26 +570,26 @@
     "fig, axs = plt.subplots(ncols=2, figsize=(12, 5))\n",
     "\n",
     "sns.scatterplot(\n",
-    "    x=x_train['Age'],\n",
-    "    y=x_train['EstimatedSalary'],\n",
-    "    hue=x_train['Gender'],\n",
-    "    color='red',\n",
-    "    ax=axs[0]\n",
+    "    x=x_train[\"Age\"],\n",
+    "    y=x_train[\"EstimatedSalary\"],\n",
+    "    hue=x_train[\"Gender\"],\n",
+    "    color=\"red\",\n",
+    "    ax=axs[0],\n",
     ")\n",
-    "axs[0].set_xlabel('Age')\n",
-    "axs[0].set_ylabel('salary')\n",
-    "axs[0].set_title('X Train')\n",
+    "axs[0].set_xlabel(\"Age\")\n",
+    "axs[0].set_ylabel(\"salary\")\n",
+    "axs[0].set_title(\"X Train\")\n",
     "\n",
     "sns.scatterplot(\n",
-    "    x=x_train_scaled['Age'],\n",
-    "    y=x_train_scaled['EstimatedSalary'],\n",
-    "    hue=x_train['Gender'],\n",
-    "    color='blue',\n",
-    "    ax=axs[1]\n",
+    "    x=x_train_scaled[\"Age\"],\n",
+    "    y=x_train_scaled[\"EstimatedSalary\"],\n",
+    "    hue=x_train[\"Gender\"],\n",
+    "    color=\"blue\",\n",
+    "    ax=axs[1],\n",
     ")\n",
-    "axs[1].set_xlabel('Age')\n",
-    "axs[1].set_ylabel('salary')\n",
-    "axs[1].set_title('X Train Scaled')\n",
+    "axs[1].set_xlabel(\"Age\")\n",
+    "axs[1].set_ylabel(\"salary\")\n",
+    "axs[1].set_title(\"X Train Scaled\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -583,12 +598,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# modeling"
+    "# modeling\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,11 +613,11 @@
     "    logistic_scaled.fit(X=x_train_scaled, y=y_train)\n",
     "    predict = logistic.predict(X=x_test)\n",
     "    predict_scaled = logistic_scaled.predict(X=x_test_scaled)\n",
-    "    \n",
-    "#    if name_scaler != 'RobustScaler':\n",
-    "#        print('scaler is ', name_scaler)\n",
-    "#        print('accuracy_score of not scaled data set ',accuracy_score(y_test, predict) * 100 , '%')\n",
-    "#        print('accuracy_score of scaled data set',     accuracy_score(y_test, predict_scaled) * 100 , '%')\n",
+    "\n",
+    "    #    if name_scaler != 'RobustScaler':\n",
+    "    #        print('scaler is ', name_scaler)\n",
+    "    #        print('accuracy_score of not scaled data set ',accuracy_score(y_test, predict) * 100 , '%')\n",
+    "    #        print('accuracy_score of scaled data set',     accuracy_score(y_test, predict_scaled) * 100 , '%')\n",
     "    score1 = accuracy_score(y_test, predict) * 100\n",
     "    score2 = accuracy_score(y_test, predict_scaled) * 100\n",
     "\n",
@@ -611,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -620,13 +635,13 @@
        "(89.16666666666667, 90.0)"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "modeling('MinMaxScaler')"
+    "modeling(\"MinMaxScaler\")"
    ]
   },
   {
@@ -641,16 +656,17 @@
    "metadata": {},
    "source": [
     "# MaxAbsScaler\n",
+    "\n",
     "Scale each feature by its maximum absolute value\n",
     "\n",
     "    x_i / max(x)\n",
     "\n",
-    "doesn’t reduce the effect of outliers; it only linearly scales them down"
+    "doesn’t reduce the effect of outliers; it only linearly scales them down\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,12 +678,12 @@
     "x_train_scaled = scaler1.transform(X=x_train)\n",
     "x_test_scaled = scaler2.transform(X=x_test)\n",
     "x_train_scaled = pd.DataFrame(data=x_train_scaled, columns=x_train.columns)\n",
-    "x_test_scaled = pd.DataFrame(data=x_test_scaled, columns=x_test.columns)\n"
+    "x_test_scaled = pd.DataFrame(data=x_test_scaled, columns=x_test.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -685,33 +701,33 @@
     "fig, axs = plt.subplots(ncols=2, figsize=(12, 5))\n",
     "\n",
     "sns.scatterplot(\n",
-    "    x=x_train['Age'],\n",
-    "    y=x_train['EstimatedSalary'],\n",
-    "    hue=x_train['Gender'],\n",
-    "    color='red',\n",
-    "    ax=axs[0]\n",
+    "    x=x_train[\"Age\"],\n",
+    "    y=x_train[\"EstimatedSalary\"],\n",
+    "    hue=x_train[\"Gender\"],\n",
+    "    color=\"red\",\n",
+    "    ax=axs[0],\n",
     ")\n",
-    "axs[0].set_xlabel('Age')\n",
-    "axs[0].set_ylabel('salary')\n",
-    "axs[0].set_title('X Train')\n",
+    "axs[0].set_xlabel(\"Age\")\n",
+    "axs[0].set_ylabel(\"salary\")\n",
+    "axs[0].set_title(\"X Train\")\n",
     "\n",
     "sns.scatterplot(\n",
-    "    x=x_train_scaled['Age'],\n",
-    "    y=x_train_scaled['EstimatedSalary'],\n",
-    "    hue=x_train['Gender'],\n",
-    "    color='blue',\n",
-    "    ax=axs[1]\n",
+    "    x=x_train_scaled[\"Age\"],\n",
+    "    y=x_train_scaled[\"EstimatedSalary\"],\n",
+    "    hue=x_train[\"Gender\"],\n",
+    "    color=\"blue\",\n",
+    "    ax=axs[1],\n",
     ")\n",
-    "axs[1].set_xlabel('Age')\n",
-    "axs[1].set_ylabel('salary')\n",
-    "axs[1].set_title('X Train Scaled')\n",
+    "axs[1].set_xlabel(\"Age\")\n",
+    "axs[1].set_ylabel(\"salary\")\n",
+    "axs[1].set_title(\"X Train Scaled\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -720,13 +736,13 @@
        "(89.16666666666667, 84.16666666666667)"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "modeling('MaxAbsScaler')"
+    "modeling(\"MaxAbsScaler\")"
    ]
   },
   {
@@ -734,16 +750,17 @@
    "metadata": {},
    "source": [
     "# RobustScaler\n",
+    "\n",
     "This scaler is a good one with outliers, because This Scaler removes the median and scales the data according to the quantile range (defaults to IQR: Interquartile Range)\n",
     "\n",
     "    (x_i - median(x)) / IQR\n",
     "\n",
-    "This scaler make a centering by removing the median, so if you don't need a centering so assign with_centering by False"
+    "This scaler make a centering by removing the median, so if you don't need a centering so assign with_centering by False\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +769,13 @@
      "text": [
       "Rodust with centring\n",
       "accuracy_score of not scaled data set  89.16666666666667 %\n",
-      "accuracy_score of scaled data set 89.16666666666667 %\n",
+      "accuracy_score of scaled data set 89.16666666666667 %\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Rodust with centring\n",
       "accuracy_score of not scaled data set  89.16666666666667 %\n",
       "accuracy_score of scaled data set 90.83333333333333 %\n",
@@ -765,11 +788,14 @@
    ],
    "source": [
     "max_RobustScaler_score, model_score, q1, q2 = 0, 0, -1, -1\n",
-    " \n",
+    "\n",
     "for Q1 in range(1, 100, 5):\n",
     "    for Q2 in range(1, 100, 10):\n",
-    "        if Q1 > Q2: continue\n",
-    "        scaler1, scaler2 = RobustScaler(quantile_range=(Q1, Q2)), RobustScaler(quantile_range=(Q1, Q2))\n",
+    "        if Q1 > Q2:\n",
+    "            continue\n",
+    "        scaler1, scaler2 = RobustScaler(quantile_range=(Q1, Q2)), RobustScaler(\n",
+    "            quantile_range=(Q1, Q2)\n",
+    "        )\n",
     "        scaler1.fit(x_train)\n",
     "        scaler2.fit(x_test)\n",
     "        x_train_scaled = scaler1.transform(X=x_train)\n",
@@ -777,15 +803,17 @@
     "        x_train_scaled = pd.DataFrame(data=x_train_scaled, columns=x_train.columns)\n",
     "        x_test_scaled = pd.DataFrame(data=x_test_scaled, columns=x_test.columns)\n",
     "\n",
-    "        score1, score2 = modeling('RobustScaler')\n",
+    "        score1, score2 = modeling(\"RobustScaler\")\n",
     "\n",
     "        if score2 > max_RobustScaler_score:\n",
-    "            print('Rodust with centring')\n",
-    "            print('accuracy_score of not scaled data set ',score1 , '%')\n",
-    "            print('accuracy_score of scaled data set',     score2 , '%')\n",
+    "            print(\"Rodust with centring\")\n",
+    "            print(\"accuracy_score of not scaled data set \", score1, \"%\")\n",
+    "            print(\"accuracy_score of scaled data set\", score2, \"%\")\n",
     "            max_RobustScaler_score, model_score, q1, q2 = score2, score1, Q1, Q2\n",
     "\n",
-    "        scaler1, scaler2 = RobustScaler(quantile_range=(Q1, Q2), with_centering=False), RobustScaler(quantile_range=(Q1, Q2), with_centering=False)\n",
+    "        scaler1, scaler2 = RobustScaler(\n",
+    "            quantile_range=(Q1, Q2), with_centering=False\n",
+    "        ), RobustScaler(quantile_range=(Q1, Q2), with_centering=False)\n",
     "        scaler1.fit(x_train)\n",
     "        scaler2.fit(x_test)\n",
     "        x_train_scaled = scaler1.transform(X=x_train)\n",
@@ -793,17 +821,17 @@
     "        x_train_scaled = pd.DataFrame(data=x_train_scaled, columns=x_train.columns)\n",
     "        x_test_scaled = pd.DataFrame(data=x_test_scaled, columns=x_test.columns)\n",
     "\n",
-    "        score1, score2 = modeling('RobustScaler')\n",
+    "        score1, score2 = modeling(\"RobustScaler\")\n",
     "\n",
     "        if score2 > max_RobustScaler_score:\n",
-    "            print('Rodust without centring')\n",
-    "            print('accuracy_score of not scaled data set ',score1 , '%')\n",
-    "            print('accuracy_score of scaled data set',     score2 , '%')\n",
+    "            print(\"Rodust without centring\")\n",
+    "            print(\"accuracy_score of not scaled data set \", score1, \"%\")\n",
+    "            print(\"accuracy_score of scaled data set\", score2, \"%\")\n",
     "            max_RobustScaler_score, model_score, q1, q2 = score2, score1, Q1, Q2\n",
     "print()\n",
-    "print('accuracy_score of not scaled data set ',model_score , '%')\n",
-    "print('accuracy_score of scaled data set',     max_RobustScaler_score , '%')\n",
-    "print('quantile_range[', q1,', ', q2,']')"
+    "print(\"accuracy_score of not scaled data set \", model_score, \"%\")\n",
+    "print(\"accuracy_score of scaled data set\", max_RobustScaler_score, \"%\")\n",
+    "print(\"quantile_range[\", q1, \", \", q2, \"]\")"
    ]
   },
   {
