--- a/Feature transformation/Outliers/Handling_Outliers.ipynb
+++ b/Feature transformation/Outliers/Handling_Outliers.ipynb
@@ -16,7 +16,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_302843/3897488789.py:1: DeprecationWarning: \n",
+      "/tmp/ipykernel_309618/3897488789.py:1: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -749,8 +749,6 @@
        "      <th>cgpa</th>\n",
        "      <th>placement_exam_marks</th>\n",
        "      <th>placed</th>\n",
-       "      <th>z-scorecgpa</th>\n",
-       "      <th>z-scoreplacement_exam_marks</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -759,45 +757,33 @@
        "      <td>7.19</td>\n",
        "      <td>26.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.371425</td>\n",
-       "      <td>-0.325391</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>7.46</td>\n",
        "      <td>38.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.809810</td>\n",
-       "      <td>0.301869</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>7.54</td>\n",
        "      <td>40.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.939701</td>\n",
-       "      <td>0.406412</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>6.42</td>\n",
        "      <td>8.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>-0.878782</td>\n",
-       "      <td>-1.266281</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>7.23</td>\n",
        "      <td>17.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.436371</td>\n",
-       "      <td>-0.795836</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -807,77 +793,54 @@
        "      <td>6.17</td>\n",
        "      <td>33.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>-1.284694</td>\n",
-       "      <td>0.040511</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>991</th>\n",
        "      <td>7.04</td>\n",
        "      <td>57.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.127878</td>\n",
-       "      <td>1.295031</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>992</th>\n",
        "      <td>6.26</td>\n",
        "      <td>12.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>-1.138565</td>\n",
-       "      <td>-1.057194</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>993</th>\n",
        "      <td>6.73</td>\n",
        "      <td>21.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>-0.375452</td>\n",
-       "      <td>-0.586749</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>994</th>\n",
        "      <td>6.48</td>\n",
        "      <td>63.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>-0.781363</td>\n",
-       "      <td>1.608661</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>953 rows × 5 columns</p>\n",
+       "<p>953 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     cgpa  placement_exam_marks  placed  z-scorecgpa  \\\n",
-       "0    7.19                  26.0       1     0.371425   \n",
-       "1    7.46                  38.0       1     0.809810   \n",
-       "2    7.54                  40.0       1     0.939701   \n",
-       "3    6.42                   8.0       1    -0.878782   \n",
-       "4    7.23                  17.0       0     0.436371   \n",
-       "..    ...                   ...     ...          ...   \n",
-       "990  6.17                  33.0       1    -1.284694   \n",
-       "991  7.04                  57.0       0     0.127878   \n",
-       "992  6.26                  12.0       0    -1.138565   \n",
-       "993  6.73                  21.0       1    -0.375452   \n",
-       "994  6.48                  63.0       0    -0.781363   \n",
+       "     cgpa  placement_exam_marks  placed\n",
+       "0    7.19                  26.0       1\n",
+       "1    7.46                  38.0       1\n",
+       "2    7.54                  40.0       1\n",
+       "3    6.42                   8.0       1\n",
+       "4    7.23                  17.0       0\n",
+       "..    ...                   ...     ...\n",
+       "990  6.17                  33.0       1\n",
+       "991  7.04                  57.0       0\n",
+       "992  6.26                  12.0       0\n",
+       "993  6.73                  21.0       1\n",
+       "994  6.48                  63.0       0\n",
        "\n",
-       "     z-scoreplacement_exam_marks  \n",
-       "0                      -0.325391  \n",
-       "1                       0.301869  \n",
-       "2                       0.406412  \n",
-       "3                      -1.266281  \n",
-       "4                      -0.795836  \n",
-       "..                           ...  \n",
-       "990                     0.040511  \n",
-       "991                     1.295031  \n",
-       "992                    -1.057194  \n",
-       "993                    -0.586749  \n",
-       "994                     1.608661  \n",
-       "\n",
-       "[953 rows x 5 columns]"
+       "[953 rows x 3 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
