--- a/Text and String Preprocessing/natural language toolkit/nltk.ipynb
+++ b/Text and String Preprocessing/natural language toolkit/nltk.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "['This', 'example', 'showing', 'stop', 'words', 'filtration', '.']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
       "\n",
       "words before :  ['It', 'is', 'very', 'imporatant', 'to', 'be', 'pythonly', 'while', 'you', 'are', 'pythoning', 'with', 'python', '.', 'All', 'pythoners', 'have', 'pythoned', 'poorly', 'at', 'least', 'ones', '.'] \n",
       "\n",
-      "words after :  {'poorli', '.', 'while', 'you', 'veri', 'python', 'least', 'are', 'have', 'is', 'imporat', 'be', 'with', 'pythonli', 'to', 'all', 'it', 'at', 'one'} \n",
+      "words after :  {'is', 'veri', 'at', 'have', 'it', 'least', 'to', 'python', 'while', '.', 'pythonli', 'one', 'you', 'be', 'with', 'poorli', 'all', 'are', 'imporat'} \n",
       "\n"
      ]
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
       "\n",
       "words before :  ['It', 'is', 'very', 'imporatant', 'to', 'be', 'pythonly', 'while', 'you', 'are', 'pythoning', 'with', 'python', '.', 'All', 'pythoners', 'have', 'pythoned', 'poorly', 'at', 'least', 'ones', '.'] \n",
       "\n",
-      "words after :  {'you', 'to', 'ar', 'it', 'python', 'least', 'very', 'at', 'hav', 'al', '.', 'is', 'whil', 'on', 'poor', 'be', 'with', 'imp'} \n",
+      "words after :  {'very', 'whil', 'poor', 'is', 'to', 'imp', 'python', 'you', 'ar', 'on', '.', 'hav', 'at', 'be', 'it', 'al', 'least', 'with'} \n",
       "\n"
      ]
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
       "[Synset('good.n.01'), Synset('good.n.02'), Synset('good.n.03'), Synset('commodity.n.01'), Synset('good.a.01'), Synset('full.s.06'), Synset('good.a.03'), Synset('estimable.s.02'), Synset('beneficial.s.01'), Synset('good.s.06'), Synset('good.s.07'), Synset('adept.s.01'), Synset('good.s.09'), Synset('dear.s.02'), Synset('dependable.s.04'), Synset('good.s.12'), Synset('good.s.13'), Synset('effective.s.04'), Synset('good.s.15'), Synset('good.s.16'), Synset('good.s.17'), Synset('good.s.18'), Synset('good.s.19'), Synset('good.s.20'), Synset('good.s.21'), Synset('well.r.01'), Synset('thoroughly.r.02')]\n",
       "all words of word good : \n",
       "\n",
-      "{'adept', 'effective', 'well', 'estimable', 'beneficial', 'commodity', 'thoroughly', 'good', 'full', 'dear', 'dependable'}\n"
+      "{'commodity', 'adept', 'good', 'thoroughly', 'well', 'full', 'estimable', 'effective', 'dear', 'dependable', 'beneficial'}\n"
      ]
     }
    ],
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
      "text": [
       "all words of word good : \n",
       "\n",
-      "{'well', 'estimable', 'proficient', 'salutary', 'beneficial', 'unspoilt', 'upright', 'in_force', 'in_effect', 'good', 'full', 'soundly', 'commodity', 'undecomposed', 'skillful', 'right', 'thoroughly', 'sound', 'expert', 'skilful', 'serious', 'practiced', 'near', 'dear', 'goodness', 'ripe', 'adept', 'unspoiled', 'safe', 'effective', 'just', 'secure', 'trade_good', 'honest', 'honorable', 'respectable', 'dependable'} \n",
+      "{'unspoilt', 'sound', 'well', 'practiced', 'honest', 'beneficial', 'commodity', 'right', 'in_force', 'respectable', 'goodness', 'soundly', 'effective', 'near', 'dear', 'proficient', 'upright', 'in_effect', 'adept', 'skillful', 'ripe', 'thoroughly', 'full', 'estimable', 'skilful', 'salutary', 'dependable', 'expert', 'trade_good', 'just', 'undecomposed', 'safe', 'good', 'unspoiled', 'honorable', 'serious', 'secure'} \n",
       "\n",
       "words and thier antonyms :\n",
       "\n",
@@ -507,12 +507,119 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [4.0 Text Classification problem]()\n"
+    "# [4.0 Wu Palmer Similarity]()\n",
+    "\n",
+    "used to get the Similarity percentage between two words\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Synset('cake.n.01'), Synset('patty.n.01'), Synset('cake.n.03'), Synset('coat.v.03')] \n",
+      "\n",
+      "[Synset('loaf_of_bread.n.01'), Synset('loaf.n.02'), Synset('bum.v.02'), Synset('loiter.v.01')] \n",
+      "\n",
+      "[Synset('bread.n.01'), Synset('boodle.n.01'), Synset('bread.v.01')] \n",
+      "\n",
+      "cake \n",
+      "\n",
+      "Synset('loaf_of_bread.n.01') \n",
+      "\n",
+      "Synset('bread.n.01') \n",
+      "\n",
+      "cake  is Similar to  loaf_of_bread  by  26.666666666666668 \n",
+      "\n",
+      "cake  is Similar to  bread  by  28.57142857142857 \n",
+      "\n",
+      "loaf_of_bread  is Similar to  cake  by  26.666666666666668 \n",
+      "\n",
+      "loaf_of_bread  is Similar to  bread  by  94.11764705882352 \n",
+      "\n",
+      "bread  is Similar to  cake  by  28.57142857142857 \n",
+      "\n",
+      "bread  is Similar to  loaf_of_bread  by  94.11764705882352 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "w1 = wordnet.synsets(\"cake\")\n",
+    "w2 = wordnet.synsets(\"loaf\")\n",
+    "w3 = wordnet.synsets(\"bread\")\n",
+    "cake = w1[0]\n",
+    "loaf = w2[0]\n",
+    "bread = w3[0]\n",
+    "print(w1, \"\\n\")\n",
+    "print(w2, \"\\n\")\n",
+    "print(w3, \"\\n\")\n",
+    "print(cake.lemmas()[0].name(), \"\\n\")\n",
+    "print(loaf, \"\\n\")\n",
+    "print(bread, \"\\n\")\n",
+    "\n",
+    "words = [cake, loaf, bread]\n",
+    "\n",
+    "for w in words:\n",
+    "    for ww in words:\n",
+    "        if w != ww:\n",
+    "            print(\n",
+    "                w.lemmas()[0].name(),\n",
+    "                \" is Similar to \",\n",
+    "                ww.lemmas()[0].name(),\n",
+    "                \" by \",\n",
+    "                w.wup_similarity(ww) * 100,\n",
+    "                \"\\n\",\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cake  is Similar to  loaf_of_bread  by  26.666666666666668 \n",
+      "\n",
+      "cake  is Similar to  bread  by  28.57142857142857 \n",
+      "\n",
+      "loaf_of_bread  is Similar to  cake  by  26.666666666666668 \n",
+      "\n",
+      "loaf_of_bread  is Similar to  bread  by  94.11764705882352 \n",
+      "\n",
+      "bread  is Similar to  cake  by  28.57142857142857 \n",
+      "\n",
+      "bread  is Similar to  loaf_of_bread  by  94.11764705882352 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# [5.0 Text Classification problem]()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -564,13 +671,6 @@
     "print(\"train acc = \", nltk.classify.accuracy(clf, train) * 100)\n",
     "print(\"test acc = \", nltk.classify.accuracy(clf, test) * 100)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
